# ShopAPI

./: README.md
project/backend/app/: alembic.ini  celerybeat-schedule  pyproject.toml  requirements.txt
project/backend/app/app/: __main__.py  main.py
project/backend/app/app/api/v1/: api.py
project/backend/app/app/api/v1/dependencies/: database_marker.py  security.py  utils.py
project/backend/app/app/api/v1/endpoints/: login.py  product.py  products.py  users.py  utils_test.py
project/backend/app/app/config/: settings.py
project/backend/app/app/email-templates/: email_login_notice.html  email_order_list.html  email_password_reset.html  email_register.html
project/backend/app/app/middlewares/: process_time_middleware.py
project/backend/app/app/services/cart/: cart.py
project/backend/app/app/services/database/: session.py
project/backend/app/app/services/database/models/: __init__.py  product.py  user.py
project/backend/app/app/services/database/repositories/: base.py  product_repository.py  user_repository.py
project/backend/app/app/services/security/: jwt.py  oauth.py
project/backend/app/app/services/worker/: base.py  celery_app.py  celery_test.py  tasks.py
project/backend/app/app/utils/: database_utils.py  gunicorn_app.py  logging.py  mail_utils.py  order_utils.py  password_hashing.py  serializer_utils.py
project/backend/app/app/utils/application_builder/: installation.py
project/backend/app/migrations/: env.py
project/backend/app/migrations/versions/: 2ca87d951c35_added_account_table.py  5a301cee89c0_added_account_table.py
project/backend/app/tests/: conftest.py
project/backend/app/tests/repositories/: test_repository.py
(+41 files in other folders)
