[tool.poetry]
name = "shop-api-kevs"
version = "0.0.1"
description = ""
authors = ["Kirill Vashchenko (Kevs) <github.com/Kevs-KV/>"]
readme = "README.md"
packages = [{include = "shop_api_kevs"}]

[tool.poetry.dependencies]
python = "3.10.5"
aioredis = "2.0.1"
aiosmtplib = "1.1.6"
alembic = "1.8.1"
amqp = "5.1.1"
anyio = "3.6.1"
async-timeout = "4.0.2"
asyncpg = "0.26.0"
bcrypt = "3.2.2"
billiard = "3.6.4.0"
blinker = "1.5"
celery = "5.2.7"
certifi = "2022.6.15"
cffi = "1.15.1"
click = "8.1.3"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.2.0"
colorama = "0.4.5"
dnspython = "2.2.1"
ecdsa = "0.18.0"
email-validator = "1.2.1"
fastapi = "0.79.0"
fastapi-mail = "1.1.4"
flower = "1.2.0"
greenlet = "1.1.2"
gunicorn = "20.1.0"
h11 = "0.12.0"
httpcore = "0.15.0"
httpx = "0.23.0"
humanize = "4.3.0"
idna = "3.3"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
kombu = "5.2.4"
Mako = "1.2.1"
MarkupSafe = "2.1.1"
nest-asyncio = "1.5.5"
orjson = "3.8.0"
passlib = "1.7.4"
prometheus-client = "0.14.1"
prompt-toolkit = "3.0.30"
pyasn1 = "0.4.8"
pycparser = "2.21"
pydantic = "1.9.1"
python-dotenv = "0.20.0"
python-jose = "3.3.0"
python-multipart = "0.0.5"
pytz = "2022.2.1"
rfc3986 = "1.5.0"
rsa = "4.9"
sentry-sdk = "1.9.5"
six = "1.16.0"
sniffio = "1.2.0"
SQLAlchemy = "1.4.39"
starlette = "0.19.1"
structlog = "22.1.0"
structlog-sentry = "1.4.0"
tornado = "6.2"
typing-extensions = "4.3.0"
urllib3 = "1.26.12"
uvicorn = "0.18.2"
vine = "5.0.0"
wcwidth = "0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
